Fixed an issue with resizing divs in the admin section. The admin section should now mimic the post page when resizing the window - more specifically the sidebar jumps below the main content section and resizes to full width.

--- a/css/sp_admin.css
+++ b/css/sp_admin.css
@@ -5,8 +5,8 @@
 
  #compFormWrapper{ display: none; }
  #postComponents{ padding-top: 10px; } 
- #categories_sidebar{	float: right;	width: 280px;	margin-right: 5px; }
- #category_settings{	float: left;	width: 780px;	padding: 5px; }
+ #categories_sidebar{	float: right;	width: 300px;	margin-right: 5px; }
+ #category_settings{	float: left;	width: 100%;	padding: 5px; }
 	.cat_title, .wp_cat_title {	cursor: pointer;	padding: 5px;	font-size: 15px; } 
  .expandArrow{ padding-top: 5px; cursor: pointer; }
  .postCompTitle, .category_title { display: inline; }
